# aiq-research-assistant

./: .gitignore  CHANGELOG.md  LICENSE-3rd-party.txt  README.md  requirements.txt
.project/: configpacks  spec.yaml
aira/: Dockerfile  entrypoint.sh  pyproject.toml
aira/configs/: config.yml  hosted-config.yml
aira/src/aiq_aira/: artifact_prompts.py  artifact_utils.py  constants.py  nodes.py  prompts.py  register.py  report_gen_utils.py  schema.py  search_utils.py  tools.py  utils.py
aira/src/aiq_aira/functions/: artifact_qa.py  generate_queries.py  generate_summary.py
aira/src/aiq_aira/search_agent/: agent.py  output_parser.py  prompt.py  register.py
aira/test_aira/: README.md  rag_response_not_relevant.json  rag_response_relevant.json  test_artifact_qa.py  test_configmap_matches_config.py  test_generate_query.py  test_generate_summary.py  test_module_loads.py  test_web_search.py
data/: Dockerfile  readme.md  requirements.txt  sync_files2.py
demo/: README.md
deploy/compose/: docker-compose.yaml
deploy/helm/aiq-aira/: Chart.yaml  values.yaml
deploy/helm/aiq-aira/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  job.yaml  secrets.yaml
deploy/workbench/: README.md  docker-compose.yaml  nginx.conf.template
docs/: FAQ.md  evaluation.md  local-development.md  phoenix-tracing.md  readme.md  rest-api.md  troubleshooting.md
docs/get-started/: get-started-docker-compose.md  get-started-helm.md  get-started-hosted-nims.md
frontend/: Dockerfile  README.md  app.py  requirements.txt
frontend/components/: __init__.py  chat.py
frontend/steps/: __init__.py  execute_queries_step.py  final_report_step.py  generate_queries_step.py  input_step.py
frontend/utils/: __init__.py  api_calls.py
notebooks/: README.md  get_started_nvidia_api.ipynb  test_rest_apis.ipynb
